--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.facebook.react:react-native:+' // From node_modules
     implementation 'us.zoom.sdk:commonlib@aar'
     implementation 'us.zoom.sdk:mobilertc@aar'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 }
